--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -19,8 +19,9 @@ body {
 }
 
 .menu {
-  width: 575px;
+  /* width: 575px; */
   margin: 52px auto;
+  text-align: center;
 }
 
 .menu-item {
@@ -59,6 +60,10 @@ body {
   margin-bottom: 60px;
 }
 
+.article-list-item:nth-child(2n + 1) {
+  margin-right: 56px;
+}
+
 .article-list-item .title {
   font-size: 30px;
   font-weight: 400;
@@ -74,13 +79,7 @@ body {
   margin-bottom: 75px;
 }
 
-.first-row {
-  margin-right: 28px;
-}
 
-.second-row {
-  margin-left: 28px;
-}
 
 .section {
   font-family: "Ubuntu", sans-serif;
@@ -106,4 +105,6 @@ body {
   font-weight: 400;
   line-height: 24px;
   margin: 0 auto;
+  font-family: "Playfair Display", serif;
+  cursor: pointer;
 }
