--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .menu {
-  margin: 52px auto;
+  padding: 52px 0;
   text-align: center;
 }
 
@@ -56,7 +56,6 @@ body {
 .article-list-item {
   display: inline-block;
   width: 420px;
- 
 }
 
 .article-list-item:nth-child(2n + 1) {
@@ -65,12 +64,11 @@ body {
 
 .article-list-item:nth-child(2) {
   margin-bottom: 60px;
-}  
+}
 
 .article-list-item:nth-child(4) {
   margin-bottom: 60px;
 }
-
 
 .article-list-item .title {
   font-size: 30px;
@@ -86,8 +84,6 @@ body {
   line-height: 24px;
   margin-bottom: 75px;
 }
-
-
 
 .section {
   font-family: "Ubuntu", sans-serif;
