--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -1,3 +1,38 @@
 /* font-family: 'Kaushan Script', cursive;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Roboto', sans-serif; */
+
+.container {
+  max-width: 1210px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  color: #95e1d3;
+}
+
+.menu-list {
+  list-style: none;
+  display: flex;
+}
+
+.menu-list .menu-list-item:not(:last-child) {
+  margin-right: 55px;
+}
+
+.menu-link {
+  color: #95e1d3;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+}
