--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -113,7 +113,7 @@
 
 .slider-menu {
   position: absolute;
-  height: 115px;
+
   width: 1111px;
 
   top: 50%;
@@ -126,6 +126,7 @@
   width: 104px;
   height: 104px;
   cursor: pointer;
+  border: 1px solid #fff;
 }
 
 .btn:hover,
@@ -162,9 +163,8 @@
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 48px;
-  font-weight: 400;
+  font-weight: 900;
   color: #515151;
-  line-height: 32px;
   text-transform: uppercase;
   padding: 10px;
 }
@@ -193,7 +193,7 @@
 .collection-list-item {
   float: left;
   margin-right: 24px;
-  width: 255px;
+
   position: relative;
   z-index: 5;
 }
@@ -208,46 +208,35 @@
 
 .name-price {
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
   line-height: 32px;
-
   background-color: #323232;
+}
+
+.name-price .title {
+  padding: 2px;
 }
 
 .name-price .name {
   text-decoration: none;
-}
-
-.name .title {
   font-size: 18px;
-  font-weight: 400;
+
   color: #ffffff;
   text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  line-height: 32px;
-  letter-spacing: -0.36px;
+
   padding-left: 12px;
 }
 
 .name-price .price {
   background-color: rgba(255, 255, 255, 0.44);
   float: right;
-  text-align: center;
-  align-content: center;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding: 2px 6px;
+
   color: #ffffff;
-  font-family: "Roboto", sans-serif;
+
   font-size: 18px;
-  line-height: 32px;
-  letter-spacing: -0.36px;
+  font-weight: 900;
 }
 
-.collection-list-item:hover .name {
-  background: #1abc9c;
-  transition: 0.4s;
-}
 .collection-list-item:hover .price {
   background: #7fd9c8;
   transition: 0.4s;
@@ -259,16 +248,15 @@
 
 .collection-list-item:hover .collection-menu-wrapper {
   background: transparent;
-  padding: 10px;
   position: absolute;
   z-index: 10;
 }
 
 .collection-menu-wrapper {
   background: transparent;
-  padding: 10px;
   position: absolute;
   z-index: -1;
+  border: 10px solid rgba(255, 255, 255, 0.44);
 }
 
 .collection-menu {
