--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -11,6 +11,7 @@ font-family: 'Roboto', sans-serif; */
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 20px;
 }
 
 .logo-title {
@@ -18,6 +19,7 @@ font-family: 'Roboto', sans-serif; */
   font-size: 30px;
   font-weight: 700;
   color: #95e1d3;
+  margin: 0;
 }
 
 .menu-list {
@@ -35,4 +37,38 @@ font-family: 'Roboto', sans-serif; */
   font-family: "Montserrat", sans-serif;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.menu-link:hover {
+  color: #f38181;
+  padding-bottom: 12px;
+  border-bottom: 3px solid #f38181;
+}
+
+.title {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.title-span {
+  display: block;
+  font-family: "Kaushan Script", cursive;
+  font-size: 24px;
+  color: #333333;
+  text-transform: none;
+  padding-bottom: 22px;
+}
+
+.service-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.service-list-item {
+  margin-right: 72px;
 }
