--- a/html-css/module-07/css/style.css
+++ b/html-css/module-07/css/style.css
@@ -105,6 +105,7 @@ html {
 .services {
   padding-top: 60px;
   text-align: center;
+  padding-bottom: 120px;
 }
 
 .services .section-title {
@@ -118,6 +119,7 @@ html {
 .service-list {
   list-style: none;
   display: flex;
+  justify-content: space-around;
 }
 
 .service-image {
@@ -127,6 +129,7 @@ html {
   border-radius: 50%;
   background-repeat: no-repeat;
   background-position: center;
+  margin: 0 auto;
 }
 
 .basket-bg {
@@ -139,4 +142,45 @@ html {
 
 .lock-bg {
   background-image: url(../img/Icon-Locked.png);
+}
+
+.service-list-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 274px;
+}
+
+.service-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: -0.45px;
+  color: #222222;
+  line-height: 75px;
+}
+
+.service-description {
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  letter-spacing: -0.35px;
+  color: #777777;
+}
+
+.contact {
+  background-color: #222222;
+  height: 676px;
+  text-align: center;
+  padding-top: 110px;
+  background-image: url(../img/Map_Image.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.contact .section-title {
+  color: #ffffff;
+}
+
+.contact .section-description {
+  color: #777777;
 }
