--- a/html-css/module-07/css/style.css
+++ b/html-css/module-07/css/style.css
@@ -185,3 +185,35 @@ html {
 .contact .section-description {
   color: #777777;
 }
+
+.contact-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-left-column :nth-last-of-type() {
+  margin-bottom: 30px;
+}
+
+.contact-name {
+  width: 455px;
+  height: 55px;
+  margin-bottom: 30px;
+}
+
+.contact-mail {
+  width: 455px;
+  height: 55px;
+  margin-bottom: 30px;
+}
+
+.contact-subject {
+  width: 455px;
+  height: 55px;
+}
+
+.contact-message {
+  width: 460px;
+  height: 210px;
+  resize: none;
+}
