--- a/html-css/module-07/css/style.css
+++ b/html-css/module-07/css/style.css
@@ -78,13 +78,15 @@ html {
   text-transform: uppercase;
   font-size: 14px;
   color: #222222;
-  transition: 0.2s;
   font-weight: 600;
+  transition-timing-function: linear;
+  transition: 1.3s;
 }
 
 .navigation-menu-link:hover {
   transition: 0.2s;
   color: #fed136;
+  transition-timing-function: linear;
 }
 
 .section-title {
@@ -186,34 +188,94 @@ html {
   color: #777777;
 }
 
-.contact-form {
+.form-container {
   display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.form-left-column {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
-.form-left-column :nth-last-of-type() {
-  margin-bottom: 30px;
+.text-area {
+  display: flex;
 }
 
 .contact-name {
   width: 455px;
-  height: 55px;
-  margin-bottom: 30px;
+  height: 52px;
+  border-radius: 2%;
+  border: none;
+}
+
+.contact-name::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #bbb;
+  font-size: 14px;
+  padding-left: 20px;
 }
 
 .contact-mail {
   width: 455px;
-  height: 55px;
-  margin-bottom: 30px;
+  height: 52px;
+  border-radius: 2%;
+  border: none;
+}
+
+.contact-mail::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #bbb;
+  font-size: 14px;
+  padding-left: 20px;
 }
 
 .contact-subject {
   width: 455px;
-  height: 55px;
+  height: 52px;
+  border-radius: 2%;
+  border: none;
+}
+
+.contact-subject::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #bbb;
+  font-size: 14px;
+  padding-left: 20px;
 }
 
 .contact-message {
-  width: 460px;
-  height: 210px;
   resize: none;
+  border-radius: 1%;
+  border: none;
+}
+
+.contact-message::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #bbb;
+  font-size: 14px;
+  padding: 20px 0 0 20px;
+}
+
+.submit-btn {
+  width: 240px;
+  height: 66px;
+  background-color: #fed136;
+  border: none;
+  border-radius: 3%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 18px;
 }
