--- a/html-css/module-07/css/style.css
+++ b/html-css/module-07/css/style.css
@@ -171,7 +171,6 @@ html {
 
 .contact {
   background-color: #222222;
-  height: 676px;
   width: 100%;
   text-align: center;
   padding-top: 110px;
@@ -188,6 +187,10 @@ html {
   color: #777777;
 }
 
+.contact-form {
+  padding-bottom: 144px;
+}
+
 .form-container {
   display: flex;
   justify-content: space-between;
@@ -198,10 +201,16 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 210px;
+}
+
+.form-left-column:not(:nth-last-child()) {
+  margin-bottom: 20px;
 }
 
 .text-area {
   display: flex;
+  padding-left: 30px;
 }
 
 .contact-name {
@@ -209,15 +218,28 @@ html {
   height: 52px;
   border-radius: 2%;
   border: none;
+  padding-left: 20px;
+  font-size: 14px;
+
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
 }
 
 .contact-name::placeholder {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 900;
   text-transform: uppercase;
   color: #bbb;
-  font-size: 14px;
-  padding-left: 20px;
+}
+
+.contact-name:invalid,
+.contact-mail:invalid,
+.contact-message:invalid {
+  outline-color: rgb(255, 0, 0);
+}
+
+.contact-name:valid,
+.contact-mail:valid,
+.contact-message:valid {
+  outline-color: rgb(0, 80, 0);
 }
 
 .contact-mail {
@@ -225,15 +247,16 @@ html {
   height: 52px;
   border-radius: 2%;
   border: none;
+
+  font-size: 14px;
+  padding-left: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
 }
 
 .contact-mail::placeholder {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 900;
   text-transform: uppercase;
   color: #bbb;
-  font-size: 14px;
-  padding-left: 20px;
 }
 
 .contact-subject {
@@ -241,30 +264,32 @@ html {
   height: 52px;
   border-radius: 2%;
   border: none;
+
+  font-size: 14px;
+  padding-left: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
 }
 
 .contact-subject::placeholder {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 900;
   text-transform: uppercase;
   color: #bbb;
-  font-size: 14px;
-  padding-left: 20px;
 }
 
 .contact-message {
   resize: none;
   border-radius: 1%;
   border: none;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  padding: 20px 0 0 20px;
+  width: 455px;
 }
 
 .contact-message::placeholder {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 900;
   text-transform: uppercase;
   color: #bbb;
-  font-size: 14px;
-  padding: 20px 0 0 20px;
 }
 
 .submit-btn {
