--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -12,22 +12,206 @@ html {
 }
 
 .container {
-  max-width: 940px;
+  width: 280px;
   width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
-  height: 700px;
   width: 100%;
-  background-image: url(../img/Vector_Smart_Object.png);
+  height: 100%;
+  background-image: url(../img/header-bg.png);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top center;
   background-size: cover;
   background-color: #1a1915;
+  padding-bottom: 138px;
 }
 
-.site-navigation {
+.authorisation {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 32px;
+  margin-bottom: 125px;
+}
+
+.authorisation-btn {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  padding: 18px;
+  background: transparent;
+  border-style: none;
+}
+.btn-border {
+  border: 2px solid #ffffff;
+  border-radius: 25px;
+}
+
+.logo {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 38px;
+}
+
+.title {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  letter-spacing: 0px;
+  margin-bottom: 18px;
+}
+
+.description {
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  font-size: 17px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  width: 218px;
+  margin: 0 auto;
+  margin-bottom: 33px;
+  text-align: center;
+}
+
+.find-partner-btn {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  background-color: #ff4e50;
+  border-radius: 25px;
+  padding: 14px;
+  display: flex;
+  justify-content: center;
+  width: 280px;
+}
+.partner {
+  padding-top: 70px;
+  padding-bottom: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.partner-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 22px;
+  text-transform: uppercase;
+  color: #333;
+  margin-bottom: 15px;
+  text-align: center;
+}
+.partner-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.partner-list-item {
+  width: 217px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.photo-container {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.partner-photo {
+  border-radius: 50%;
+}
+
+.photo-container::after {
+  content: "";
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 4px solid #fff;
+  border-radius: 50%;
+}
+
+.tv::after {
+  background-image: url(../img/icons/s01.png);
+  background-color: #ff4e50;
+}
+
+.glass::after {
+  background-image: url(../img/icons/s02.png);
+  background-color: #ffa507;
+}
+
+.cup::after {
+  background-image: url(../img/icons/s03.png);
+  background-color: #1cd7ad;
+}
+
+.tweet::after {
+  background-image: url(../img/icons/s04.png);
+  background-color: #4e73db;
+}
+
+.partner-name {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.partner-motto {
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.more-patners-btn {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  color: #ff4e50;
+  text-decoration: none;
+  margin: 0 auto;
+  border: 2px solid #ff4e50;
+  border-radius: 25px;
+  background-color: transparent;
+  padding: 14px;
+  display: flex;
+  justify-content: center;
+  width: 193px;
+}
+
+/* .site-navigation {
   display: flex;
   justify-content: space-between;
   padding-top: 50px;
@@ -37,4 +221,4 @@ html {
   width: 150px;
   display: flex;
   justify-content: space-between;
-}
+} */
