--- a/html-css/module-07/css/style.css
+++ b/html-css/module-07/css/style.css
@@ -96,6 +96,7 @@ html {
   line-height: 75px;
   letter-spacing: -1px;
   margin-bottom: 15px;
+  text-transform: uppercase;
 }
 
 .section-description {
@@ -124,7 +125,8 @@ html {
   justify-content: space-around;
 }
 
-.service-image {
+.service-list-item::before {
+  content: "";
   width: 68px;
   height: 68px;
   border: 3px solid #fed136;
@@ -134,15 +136,15 @@ html {
   margin: 0 auto;
 }
 
-.basket-bg {
+.basket-bg::before {
   background-image: url(../img/Icon-Basket.png);
 }
 
-.laptop-bg {
+.laptop-bg::before {
   background-image: url(../img/Icon-Laptop.png);
 }
 
-.lock-bg {
+.lock-bg::before {
   background-image: url(../img/Icon-Locked.png);
 }
 
