--- a/html-css/module-08/css/media.css
+++ b/html-css/module-08/css/media.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 959px) {
   .container {
     width: 478px;
   }
@@ -13,6 +13,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 120px;
+    padding-top: 50px;
   }
   .authorisation {
     margin-bottom: 0px;
@@ -23,5 +24,11 @@
   }
   .find-partner-btn {
     width: 228px;
+  }
+}
+
+@media (min-width: 960px) {
+  .container {
+    width: 940px;
   }
 }
