--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -15,9 +15,6 @@ html {
   width: 280px;
   width: 100%;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .header {
@@ -95,9 +92,10 @@ html {
   background-color: #ff4e50;
   border-radius: 25px;
   padding: 14px;
-  display: flex;
-  justify-content: center;
   width: 280px;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 .partner {
   padding-top: 70px;
