--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -20,7 +20,7 @@ html {
 .header {
   background-image: url(../img/header-bg.png);
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center;
   background-size: cover;
   background-color: #1a1915;
   padding-bottom: 138px;
@@ -39,9 +39,11 @@ html {
   font-size: 14px;
   color: #fff;
   text-decoration: none;
-  padding: 18px;
+  padding: 12px 18px;
   background: transparent;
   border-style: none;
+  outline: none;
+  cursor: pointer;
 }
 .btn-border {
   border: 2px solid #ffffff;
@@ -63,11 +65,13 @@ html {
 .title {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  font-size: 28px;
+  font-size: 30px;
   text-transform: uppercase;
   color: #fff;
   text-align: center;
+  margin: 0 auto;
   letter-spacing: 0px;
+  margin-bottom: 20px;
 }
 
 .description {
@@ -79,7 +83,7 @@ html {
   justify-content: center;
   width: 218px;
   margin: 0 auto;
-  margin-bottom: 33px;
+  margin-bottom: 34px;
   text-align: center;
 }
 
@@ -203,6 +207,8 @@ html {
   display: flex;
   justify-content: center;
   width: 193px;
+  outline: none;
+  cursor: pointer;
 }
 
 /* .site-navigation {
