--- a/html-css/module-08/css/media.css
+++ b/html-css/module-08/css/media.css
@@ -1,10 +1,20 @@
-@media (min-width: 768px) and (max-width: 959px) {
-  .container {
-    width: 478px;
+@media (min-width: 520px) {
+  .site-navigation {
+    max-width: 480px;
   }
 
-  .header .container {
-    width: 670px;
+  .partner-title {
+    margin-bottom: 32px;
+  }
+  .description {
+    width: auto;
+    font-size: 24px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 480px;
   }
 
   .site-navigation {
@@ -14,6 +24,7 @@
     align-items: center;
     margin-bottom: 120px;
     padding-top: 50px;
+    max-width: 670px;
   }
   .authorisation {
     margin-bottom: 0px;
@@ -27,9 +38,10 @@
     font-size: 52px;
     width: 510px;
   }
-}
-.find-partner-btn {
-  width: 228px;
+
+  .find-partner-btn {
+    width: 228px;
+  }
 }
 
 @media (min-width: 960px) {
@@ -37,27 +49,13 @@
     width: 940px;
   }
 
-  .authorisation {
-    margin-bottom: 0px;
-    padding-top: 0px;
-  }
-
-  .logo {
-    margin-bottom: 0;
-  }
-
   .site-navigation {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 160px;
     padding-top: 50px;
+    max-width: 940px;
   }
 
   .title {
-    font-size: 52px;
-    width: 510px;
     margin-bottom: 40px;
   }
 
