--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -26,6 +26,11 @@ html {
   padding-bottom: 138px;
 }
 
+.site-navigation {
+  max-width: 200px;
+  margin: 0 auto;
+}
+
 .authorisation {
   display: flex;
   justify-content: space-around;
@@ -113,7 +118,6 @@ html {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 22px;
-  text-transform: uppercase;
   color: #333;
   margin-bottom: 15px;
   text-align: center;
