--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 .header {
-  background-image: url(../img/header-bg.png);
+  background-image: url(../img/header-bg-sm.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
