--- a/html-css/module-08/css/media.css
+++ b/html-css/module-08/css/media.css
@@ -1,4 +1,8 @@
 @media (min-width: 520px) {
+  .container {
+    width: 440px;
+  }
+
   .header {
     background-image: url(../img/header-bg.png);
   }
