--- a/html-css/module-09/css/style.css
+++ b/html-css/module-09/css/style.css
@@ -23,6 +23,21 @@
   --secondary-font: "Roboto", serif;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
 .main-font {
   font-family: var(--main-font);
   font-weight: 700;
@@ -94,9 +109,10 @@
   background-color: #ff4e50;
   border-radius: 25px;
   padding: 14px;
-  width: 100%;
-  display: inline-block;
+  max-width: 280px;
+  display: block;
   text-align: center;
+  margin: 0 auto;
 }
 
 .partner {
@@ -117,10 +133,19 @@
 .photo-container {
   position: relative;
   margin-bottom: 20px;
+  width: 121px;
+  height: 121px;
+  margin: 0 auto 20px auto;
 }
 
 .partner-photo {
   border-radius: 50%;
+}
+
+.partner-motto {
+  letter-spacing: 0.01em;
+  font-size: 14px;
+  color: #666666;
 }
 
 .photo-container::after {
