--- a/html-css/module-10/css/normalize.css
+++ b/html-css/module-10/css/normalize.css
@@ -152,6 +152,9 @@ sup {
 
 img {
   border-style: none;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Forms
@@ -353,4 +356,17 @@ template {
 
 [hidden] {
   display: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
